--- a/requirements.txt
+++ b/requirements.txt
@@ -47,5 +47,7 @@ graphviz>=0.21
 # LangChain and Vector Store
 langchain>=0.1.0
 langchain-community>=0.1.0
+langchain-classic>=1.0.0
+langchain-ollama>=1.0.0
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
